--- a/.github/workflows/weather.yaml
+++ b/.github/workflows/weather.yaml
@@ -6,8 +6,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  Update-Weather:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      EMAIL: ${{ secrets.EMAIL }}
+      SMTP_HOST: ${{ secrets.SMTP_HOST }}
+      SMTP_PORT: ${{ secrets.SMTP_PORT }}
+      SMTP_USER: ${{ secrets.SMTP_USER }}
+      SMTP_PASS: ${{ secrets.SMTP_PASS }}
     steps:
       - name: Get working copy
         uses: actions/checkout@master
