--- a/.github/workflows/weather.yaml
+++ b/.github/workflows/weather.yaml
@@ -33,6 +33,6 @@ jobs:
           git config user.name "alphasofthub-bot"
           git config user.email "alphasofthub-bot@users.noreply.github.com"
           git add -A
-          timestamp=$(date -u)
+          timestamp=$(python src/time.py 2>&1)
           git commit -m "Last Commit: ${timestamp}" || exit 0
           git push origin main
