update workflow file
Signed-off-by: Muhammad Umer Farooq <umer@lablnet.com>

--- a/.github/workflows/weather.yaml
+++ b/.github/workflows/weather.yaml
@@ -28,6 +28,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Update dataset
         run: python src/main.py
+      - name: Export latest data to JavaScript
+        run: python src/export.py js
       - name: Commit and push if it changed
         run: |
           git config user.name "alphasofthub-bot"
