--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "jquery": "^3.5.0",
+    "selectize": "^0.12.6"
   },
   "scripts": {
     "start": "react-scripts start",
